[package]
name = "godotup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.3.10"
confy = "0.5.1"
dirs = "5.0.1"
indicatif = "0.17.5"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_yaml = "0.9.22"
tokio = { version = "1.29.1", features = ["full", "test-util"] }
tokio-test = "0.4.2"
